manifests/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pinger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pinger
  template:
    metadata:
      labels:
        app: pinger
    spec:
      containers:
        - name: pinger
          image: reselbob/pinger
          ports:
              containerPort: 3000
