manifests/multi-contianer-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: multipod
  labels:
    app: multipod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      -
        containerPort: 8080
  - name: pinger
    image: reselbob/pinger
    ports:
      -
        containerPort: 3000
