manifests/reseltraining.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pinger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pinger
  template:
    metadata:
      labels:
        app: pinger
    spec:
      containers:
        - name: pinger
          image: reseltraining/pinger:latest
          ports:
            -
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pinger
spec:
  selector:
    app: pinger
  ports:
  -
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
