manifests/service-ft.yaml
apiVersion: v1
kind: Service
metadata:
  name: feelingtracker
spec:
  selector:
    app: feelingtracker
  ports:
  -
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
