manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinger
spec:
  selector:
    app: pinger
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
