manifests/service_reseltraining.yaml
apiVersion: v1
kind: Service
metadata:
  name: pinger
spec:
  selector:
    app: pinger
  ports:
  -
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
